input-sys/src/platforms/freebsd/x86/gen_1_9.rs

extern "C" {
    #[doc = " @ingroup tablet_pad_modes"]
    #[doc = ""]
    #[doc = " The returned mode group is not refcounted and may become invalid after"]
    #[doc = " the next call to libinput. Use libinput_tablet_pad_mode_group_ref() and"]
    #[doc = " libinput_tablet_pad_mode_group_unref() to continue using the handle"]
    #[doc = " outside of the immediate scope."]
    #[doc = ""]
    #[doc = " While at least one reference is kept by the caller, the returned mode"]
    #[doc = " group will be identical for each subsequent call of this function with"]
    #[doc = " the same index and that same struct is returned from"]
    #[doc = " libinput_event_tablet_pad_get_mode_group(), provided the event was"]
    #[doc = " generated by this mode group."]
    #[doc = ""]
    #[doc = " @param device A device with the @ref LIBINPUT_DEVICE_CAP_TABLET_PAD"]
    #[doc = " capability"]
    #[doc = " @param index A mode group index"]
    #[doc = " @return the mode group with the given index or NULL if an invalid index"]
    #[doc = " is given."]
    pub fn libinput_device_tablet_pad_get_mode_group(
        device: *mut libinput_device,
        index: ::libc::c_uint,
    ) -> *mut libinput_tablet_pad_mode_group;
}
extern "C" {
    #[doc = " @ingroup tablet_pad_modes"]
    #[doc = ""]
    #[doc = " The returned number is the same index as passed to"]
    #[doc = " libinput_device_tablet_pad_get_mode_group(). For tablets with only one"]
    #[doc = " mode this number is always 0."]
    #[doc = ""]
    #[doc = " @param group A previously obtained mode group"]
    #[doc = " @return the numeric index this mode group represents, starting at 0"]
    pub fn libinput_tablet_pad_mode_group_get_index(
        group: *mut libinput_tablet_pad_mode_group,
    ) -> ::libc::c_uint;
}
extern "C" {
    #[doc = " @ingroup tablet_pad_modes"]
    #[doc = ""]
    #[doc = " Query the mode group for the number of available modes. The number of"]
    #[doc = " modes is usually decided by the number of physical LEDs available on the"]
    #[doc = " device. Different mode groups may have a different number of modes. Use"]
    #[doc = " libinput_tablet_pad_mode_group_get_mode() to get the currently active"]
    #[doc = " mode."]
    #[doc = ""]
    #[doc = " libinput guarantees that at least one mode is available. A device without"]
    #[doc = " mode switching capability has a single mode group and a single mode."]
    #[doc = ""]
    #[doc = " @param group A previously obtained mode group"]
    #[doc = " @return the number of modes available in this mode group"]
    pub fn libinput_tablet_pad_mode_group_get_num_modes(
        group: *mut libinput_tablet_pad_mode_group,
    ) -> ::libc::c_uint;
}
extern "C" {
    #[doc = " @ingroup tablet_pad_modes"]
    #[doc = ""]
    #[doc = " Return the current mode this mode group is in. Note that the returned"]
    #[doc = " mode is the mode valid as of completing the last libinput_dispatch()."]
    #[doc = " The returned mode may thus be different than the mode returned by"]
    #[doc = " libinput_event_tablet_pad_get_mode()."]
    #[doc = ""]
    #[doc = " For example, if the mode was toggled three times between the call to"]
    #[doc = " libinput_dispatch(), this function returns the third mode but the events"]
    #[doc = " in the event queue will return the modes 1, 2 and 3, respectively."]
    #[doc = ""]
    #[doc = " @param group A previously obtained mode group"]
    #[doc = " @return the numeric index of the current mode in this group, starting at 0"]
    #[doc = ""]
    #[doc = " @see libinput_event_tablet_pad_get_mode"]
    pub fn libinput_tablet_pad_mode_group_get_mode(
        group: *mut libinput_tablet_pad_mode_group,
    ) -> ::libc::c_uint;
}
extern "C" {
    #[doc = " @ingroup tablet_pad_modes"]
    #[doc = ""]
    #[doc = " Devices without mode switching capabilities return true for every button."]
    #[doc = ""]
    #[doc = " @param group A previously obtained mode group"]
    #[doc = " @param button A button index, starting at 0"]
    #[doc = " @return true if the given button index is part of this mode group or"]
    #[doc = " false otherwise"]
    pub fn libinput_tablet_pad_mode_group_has_button(
        group: *mut libinput_tablet_pad_mode_group,
        button: ::libc::c_uint,
    ) -> ::libc::c_int;
}
extern "C" {
    #[doc = " @ingroup tablet_pad_modes"]
    #[doc = ""]
    #[doc = " Devices without mode switching capabilities return true for every ring."]
    #[doc = ""]
    #[doc = " @param group A previously obtained mode group"]
    #[doc = " @param ring A ring index, starting at 0"]
    #[doc = " @return true if the given ring index is part of this mode group or"]
    #[doc = " false otherwise"]
    pub fn libinput_tablet_pad_mode_group_has_ring(
        group: *mut libinput_tablet_pad_mode_group,
        ring: ::libc::c_uint,
    ) -> ::libc::c_int;
}
extern "C" {
    #[doc = " @ingroup tablet_pad_modes"]
    #[doc = ""]
    #[doc = " Devices without mode switching capabilities return true for every strip."]
    #[doc = ""]
    #[doc = " @param group A previously obtained mode group"]
    #[doc = " @param strip A strip index, starting at 0"]
    #[doc = " @return true if the given strip index is part of this mode group or"]
    #[doc = " false otherwise"]
    pub fn libinput_tablet_pad_mode_group_has_strip(
        group: *mut libinput_tablet_pad_mode_group,
        strip: ::libc::c_uint,
    ) -> ::libc::c_int;
}
extern "C" {
    #[doc = " @ingroup tablet_pad_modes"]
    #[doc = ""]
    #[doc = " The toggle button in a mode group is the button assigned to cycle to or"]
    #[doc = " directly assign a new mode when pressed. Not all devices have a toggle"]
    #[doc = " button and some devices may have more than one toggle button. For"]
    #[doc = " example, the Wacom Cintiq 24HD has six toggle buttons in two groups, each"]
    #[doc = " directly selecting one of the three modes per group."]
    #[doc = ""]
    #[doc = " Devices without mode switching capabilities return false for every button."]
    #[doc = ""]
    #[doc = " @param group A previously obtained mode group"]
    #[doc = " @param button A button index, starting at 0"]
    #[doc = " @retval non-zero if the button is a mode toggle button for this group, or"]
    #[doc = " zero otherwise"]
    pub fn libinput_tablet_pad_mode_group_button_is_toggle(
        group: *mut libinput_tablet_pad_mode_group,
        button: ::libc::c_uint,
    ) -> ::libc::c_int;
}
extern "C" {
    #[doc = " @ingroup tablet_pad_modes"]
    #[doc = ""]
    #[doc = " Increase the refcount of the mode group. A mode group will be"]
    #[doc = " freed whenever the refcount reaches 0."]
    #[doc = ""]
    #[doc = " @param group A previously obtained mode group"]
    #[doc = " @return The passed mode group"]
    pub fn libinput_tablet_pad_mode_group_ref(
        group: *mut libinput_tablet_pad_mode_group,
    ) -> *mut libinput_tablet_pad_mode_group;
}
extern "C" {
    #[doc = " @ingroup tablet_pad_modes"]
    #[doc = ""]
    #[doc = " Decrease the refcount of the mode group. A mode group will be"]
    #[doc = " freed whenever the refcount reaches 0."]
    #[doc = ""]
    #[doc = " @param group A previously obtained mode group"]
    #[doc = " @return NULL if the group was destroyed, otherwise the passed mode group"]
    pub fn libinput_tablet_pad_mode_group_unref(
        group: *mut libinput_tablet_pad_mode_group,
    ) -> *mut libinput_tablet_pad_mode_group;
}
extern "C" {
    #[doc = " @ingroup tablet_pad_modes"]
    #[doc = ""]
    #[doc = " Set caller-specific data associated with this mode group. libinput does"]
    #[doc = " not manage, look at, or modify this data. The caller must ensure the"]
    #[doc = " data is valid."]
    #[doc = ""]
    #[doc = " @param group A previously obtained mode group"]
    #[doc = " @param user_data Caller-specific data pointer"]
    #[doc = " @see libinput_tablet_pad_mode_group_get_user_data"]
    #[doc = ""]
    pub fn libinput_tablet_pad_mode_group_set_user_data(
        group: *mut libinput_tablet_pad_mode_group,
        user_data: *mut ::libc::c_void,
    );
}
extern "C" {
    #[doc = " @ingroup tablet_pad_modes"]
    #[doc = ""]
    #[doc = " Get the caller-specific data associated with this mode group, if any."]
    #[doc = ""]
    #[doc = " @param group A previously obtained mode group"]
    #[doc = " @return Caller-specific data pointer or NULL if none was set"]
    #[doc = " @see libinput_tablet_pad_mode_group_set_user_data"]
    pub fn libinput_tablet_pad_mode_group_get_user_data(
        group: *mut libinput_tablet_pad_mode_group,
    ) -> *mut ::libc::c_void;
}
pub const libinput_switch_state_LIBINPUT_SWITCH_STATE_OFF: libinput_switch_state = 0;
pub const libinput_switch_state_LIBINPUT_SWITCH_STATE_ON: libinput_switch_state = 1;
#[doc = " @ingroup device"]
#[doc = ""]
#[doc = " The state of a switch. The default state of a switch is @ref"]
#[doc = " LIBINPUT_SWITCH_STATE_OFF and no event is sent to confirm a switch in the"]
#[doc = " off position. If a switch is logically on during initialization, libinput"]
#[doc = " sends an event of type @ref LIBINPUT_EVENT_SWITCH_TOGGLE with a state"]
#[doc = " @ref LIBINPUT_SWITCH_STATE_ON."]
pub type libinput_switch_state = ::libc::c_uint;
#[doc = " The laptop lid was closed when the switch state is @ref"]
#[doc = " LIBINPUT_SWITCH_STATE_ON, or was opened when it is @ref"]
#[doc = " LIBINPUT_SWITCH_STATE_OFF."]
pub const libinput_switch_LIBINPUT_SWITCH_LID: libinput_switch = 1;
#[doc = " This switch indicates whether the device is in normal laptop mode"]
#[doc = " or behaves like a tablet-like device where the primary"]
#[doc = " interaction is usually a touch screen. When in tablet mode, the"]
#[doc = " keyboard and touchpad are usually inaccessible."]
#[doc = ""]
#[doc = " If the switch is in state @ref LIBINPUT_SWITCH_STATE_OFF, the"]
#[doc = " device is in laptop mode. If the switch is in state @ref"]
#[doc = " LIBINPUT_SWITCH_STATE_ON, the device is in tablet mode and the"]
#[doc = " keyboard or touchpad may not be  accessible."]
#[doc = ""]
#[doc = " It is up to the caller to identify which devices are inaccessible"]
#[doc = " in tablet mode."]
pub const libinput_switch_LIBINPUT_SWITCH_TABLET_MODE: libinput_switch = 2;
#[doc = " @ingroup device"]
#[doc = ""]
#[doc = " The type of a switch."]
pub type libinput_switch = ::libc::c_uint;
#[doc = " @ingroup event_switch"]
#[doc = " @struct libinput_event_switch"]
#[doc = ""]
#[doc = " A switch event representing a changed state in a switch."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct libinput_event_switch {
    _unused: [u8; 0],
}
